# run

./: .editorconfig  .gitignore  Cargo.toml  README.md  run.toml  schema.json
bash/: Cargo.toml
bash/src/: lib.rs
src/: lib.rs  main.rs
