[package]
name = "run"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bash = { git = "https://github.com/manen/puzzle", version = "0.1.0" }
pathsearch = "0.2.0"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
